<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContentForGoodsOut.GoodsOutWill.GoodsOutWillActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:orientation="horizontal"
                android:layout_height="50dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/tab_menu_all_will_goods_out"
                        android:layout_width="100dp"
                        android:layout_weight="1"
                        android:text="@string/tab_menu_all_will_goods_out"
                        android:gravity="center"
                        style="@style/radioTheme"
                        android:layout_height="50dp"/>

                    <RadioButton
                        android:id="@+id/tab_menu_becheck_will_goods_out"
                        android:layout_width="100dp"
                        android:layout_weight="1"
                        android:text="@string/tab_menu_becheck_will_goods_out"
                        android:gravity="center"
                        style="@style/radioTheme"
                        android:background="@drawable/bottom_border"
                        android:layout_height="50dp"/>

                    <RadioButton
                        android:id="@+id/tab_menu_checked_will_goods_out"
                        android:layout_width="100dp"
                        android:layout_weight="1"
                        android:text="@string/tab_menu_checked_will_goods_out"
                        android:gravity="center"
                        style="@style/radioTheme"
                        android:layout_height="50dp"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
        <FrameLayout
            android:id="@+id/willGoodsOutFragment"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>