<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homemenu.HomeMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorHeadTop"></LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/homeMenuGoodsOut"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/homeMenuGoodsOutCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_out" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/home_menu_goods_out" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/homeMenuGoodsIn"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/homeMenuGoodsInCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_in" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/home_menu_goods_in" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/homeMenuGoodsCheck"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/homeMenuGoodsCheckCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_check" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/home_menu_goods_check" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/homeMenuGoodsMove"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/homeMenuGoodsMoveCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_moved" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/home_menu_goods_moved" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/homeMenuGoodslist"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/goodsInCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_list" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/home_menu_goods_list" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>