<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.secondmenu.SecondMenuGoodsInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHeadTop"></LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/secondMenuGoodsInForInventory"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hsecondMenuGoodsInForBugCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_out" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/second_menu_goods_in_for_bug" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/secondMenuGoodsInForNormalGoodsReturn"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/secondMenuGoodsInForNormalGoodsReturnCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_out" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/second_menu_goods_in_for_normalGoods_return" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/secondMenuGoodsInForBadGoodsReturn"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/secondMenuGoodsInForBadGoodsReturnCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_out" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/second_menu_goods_in_for_badGoods_return" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/secondMenuGoodsInForbalanced"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/secondMenuGoodsInForbalancedCardImg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_goods_out" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/second_menu_goods_in_for_balanced" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>